Fix spec + return codes for simple templates
